--- a/server/package.json
+++ b/server/package.json
@@ -4,13 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "Eithan Sirusi <mail@mail.com>",
   "license": "ENS",
   "dependencies": {
+    "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
-    "nodemon": "^2.0.20"
+    "express-validator": "^6.14.2",
+    "mongoose": "^6.6.1",
+    "mongoose-unique-validator": "^3.1.0",
+    "nodemon": "^2.0.20",
+    "uuidv4": "^6.2.13"
   }
 }
